--- a/tokens/config.json
+++ b/tokens/config.json
@@ -147,7 +147,7 @@
       },
       "footnote": {
         "text": {
-          "value": "{config.fontSize.base} - 0.375rem",
+          "value": "{config.fontSize.base} - 0.25rem",
           "type": "fontSizes"
         },
         "symbol": {
@@ -161,7 +161,7 @@
           "type": "fontSizes"
         },
         "symbol": {
-          "value": "{config.fontSize.code.text}",
+          "value": "{config.fontSize.code.text} + 0.125rem",
           "type": "fontSizes"
         }
       }
