--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1140,7 +1140,7 @@
           "default": {
             "value": {
               "fontFamily": "{config.fontFamily.symbol}",
-              "fontWeight": "{config.fontWeight.semibold}",
+              "fontWeight": "{config.fontWeight.medium}",
               "lineHeight": "130%",
               "fontSize": "{config.fontSize.title.text}"
             },
@@ -1149,7 +1149,7 @@
           "strong": {
             "value": {
               "fontFamily": "{config.fontFamily.symbol}",
-              "fontWeight": "{config.fontWeight.bold}",
+              "fontWeight": "{config.fontWeight.heavy}",
               "lineHeight": "130%",
               "fontSize": "{config.fontSize.title.text}"
             },
@@ -1233,7 +1233,7 @@
           "strong": {
             "value": {
               "fontFamily": "{config.fontFamily.symbol}",
-              "fontWeight": "{config.fontWeight.medium}",
+              "fontWeight": "{config.fontWeight.bold}",
               "lineHeight": "160%",
               "fontSize": "{config.fontSize.body.text}"
             },
@@ -1317,7 +1317,7 @@
           "strong": {
             "value": {
               "fontFamily": "{config.fontFamily.symbol}",
-              "fontWeight": "{config.fontWeight.medium}",
+              "fontWeight": "{config.fontWeight.semibold}",
               "lineHeight": "160%",
               "fontSize": "{config.fontSize.caption.text}"
             },
@@ -1359,7 +1359,7 @@
           "strong": {
             "value": {
               "fontFamily": "{config.fontFamily.symbol}",
-              "fontWeight": "{config.fontWeight.medium}",
+              "fontWeight": "{config.fontWeight.semibold}",
               "lineHeight": "160%",
               "fontSize": "{config.fontSize.footnote.text}"
             },
@@ -1401,7 +1401,7 @@
           "strong": {
             "value": {
               "fontFamily": "{config.fontFamily.symbol}",
-              "fontWeight": "{config.fontWeight.medium}",
+              "fontWeight": "{config.fontWeight.semibold}",
               "lineHeight": "160%",
               "fontSize": "{config.fontSize.code.text}"
             },
