--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1191,7 +1191,7 @@
           "strong": {
             "value": {
               "fontFamily": "{config.fontFamily.symbol}",
-              "fontWeight": "{config.fontWeight.medium}",
+              "fontWeight": "{config.fontWeight.semibold}",
               "lineHeight": "150%",
               "fontSize": "{config.fontSize.subtitle.text}"
             },
