update button icon

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -948,6 +948,15 @@
               "lineHeight": "100%"
             },
             "type": "typography"
+          },
+          "only": {
+            "value": {
+              "fontFamily": "{config.fontFamily.symbol}",
+              "fontWeight": "{config.fontWeight.text}",
+              "fontSize": "{config.fontSize.control.text}",
+              "lineHeight": "auto"
+            },
+            "type": "typography"
           }
         },
         "number": {
