--- a/tokens/application.json
+++ b/tokens/application.json
@@ -1440,7 +1440,7 @@
             "type": "fontSizes"
           },
           "md": {
-            "value": "{config.fontSize.control.text} - 0.0625rem",
+            "value": "{config.fontSize.control.text}",
             "type": "fontSizes"
           },
           "lg": {
