--- a/tokens/application.json
+++ b/tokens/application.json
@@ -759,6 +759,10 @@
             "translucent": {
               "type": "color",
               "value": "hsla({config.color.success.hue.default}, {config.color.success.saturation.translucent}, 65%, {config.color.danger.alpha.bg.default})"
+            },
+            "tone": {
+              "type": "color",
+              "value": "hsl({config.color.success.hue.default}, {config.color.success.saturation.default}, 10%)"
             }
           },
           "border": {
@@ -780,6 +784,10 @@
               "type": "color",
               "value": "hsl({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 96%)"
             },
+            "onTone": {
+              "type": "color",
+              "value": "hsl({config.color.success.hue.default}, {config.color.success.saturation.translucent}, 85%)"
+            },
             "onTranslucent": {
               "type": "color",
               "value": "hsl({config.color.success.hue.default}, {config.color.success.saturation.default}, 10%)"
@@ -795,6 +803,10 @@
             "translucent": {
               "type": "color",
               "value": "hsla({config.color.warning.hue.default}, {config.color.warning.saturation.translucent}, 75%, {config.color.danger.alpha.bg.default})"
+            },
+            "tone": {
+              "type": "color",
+              "value": "hsl({config.color.warning.hue.default}, {config.color.warning.saturation.default}, 15%)"
             }
           },
           "border": {
@@ -815,6 +827,10 @@
             "onSolid": {
               "type": "color",
               "value": "hsl({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 96%)"
+            },
+            "onTone": {
+              "type": "color",
+              "value": "hsl({config.color.warning.hue.default}, {config.color.warning.saturation.translucent}, 85%)"
             },
             "onTranslucent": {
               "type": "color",
@@ -876,6 +892,10 @@
               "type": "color",
               "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.translucent}, 60%, 0.2)"
             },
+            "tone": {
+              "type": "color",
+              "value": "hsl({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 90%)"
+            },
             "checked": {
               "type": "color",
               "value": "hsla({config.color.accent.hue.default}, {config.color.accent.saturation.default}, 50%, {config.color.accent.alpha.bg.default})"
@@ -893,6 +913,10 @@
           },
           "fg": {
             "solid": {
+              "type": "color",
+              "value": "hsl({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 70%)"
+            },
+            "onTone": {
               "type": "color",
               "value": "hsl({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 70%)"
             },
