--- a/tokens/application.json
+++ b/tokens/application.json
@@ -546,6 +546,10 @@
                   }
                 }
               }
+            },
+            "tone": {
+              "type": "color",
+              "value": "{app.color.surface.fg.default}"
             }
           },
           "border": {
@@ -575,6 +579,10 @@
             "onSolid": {
               "type": "color",
               "value": "{app.color.surface.fg.default}"
+            },
+            "onTone": {
+              "type": "color",
+              "value": "hsl({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 96%)"
             },
             "onTranslucent": {
               "type": "color",
