--- a/tokens/application.json
+++ b/tokens/application.json
@@ -509,6 +509,10 @@
             "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 60%, 0.98)",
             "type": "color"
           },
+          "subtle": {
+            "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 80%, 0.98)",
+            "type": "color"
+          },
           "link": {
             "value": "hsl({config.color.accent.hue.default}, {config.color.accent.saturation.default}, 50%)",
             "type": "color"
