fixed primary light

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -516,6 +516,10 @@
           "link": {
             "value": "hsl({config.color.accent.hue.default}, {config.color.accent.saturation.default}, 50%)",
             "type": "color"
+          },
+          "inverted": {
+            "value": "hsl({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 96%)",
+            "type": "color"
           }
         },
         "shadow": {
