--- a/tokens/application.json
+++ b/tokens/application.json
@@ -557,7 +557,7 @@
             },
             "tone": {
               "type": "color",
-              "value": "{app.color.surface.fg.default}"
+              "value": "{app.color.surface.elevation.base.bg.default}"
             }
           },
           "border": {
@@ -590,7 +590,7 @@
             },
             "onTone": {
               "type": "color",
-              "value": "hsl({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 96%)"
+              "value": "{app.color.surface.fg.default}"
             },
             "onTranslucent": {
               "type": "color",
@@ -676,13 +676,13 @@
               "type": "color",
               "value": "hsl({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 96%)"
             },
-            "onTranslucent": {
-              "type": "color",
-              "value": "{app.color.surface.fg.default}"
-            },
             "onTone": {
               "type": "color",
               "value": "hsl({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 96%)"
+            },
+            "onTranslucent": {
+              "type": "color",
+              "value": "{app.color.surface.fg.default}"
             }
           }
         },
