--- a/tokens/config.json
+++ b/tokens/config.json
@@ -272,6 +272,10 @@
               "value": "0.4",
               "type": "other"
             },
+            "subtle": {
+              "value": "0.2",
+              "type": "other"
+            },
             "hover": {
               "value": "0.5",
               "type": "other"
@@ -284,6 +288,10 @@
           "border": {
             "default": {
               "value": "0.45",
+              "type": "other"
+            },
+            "subtle": {
+              "value": "0.25",
               "type": "other"
             },
             "hover": {
