--- a/tokens/application.json
+++ b/tokens/application.json
@@ -696,6 +696,10 @@
               "type": "color",
               "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.translucent}, 10%, {config.color.neutral.alpha.bg.default})"
             },
+            "translucentSubtle": {
+              "type": "color",
+              "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.translucent}, 10%, {config.color.neutral.alpha.bg.default})"
+            },
             "tone": {
               "type": "color",
               "value": "hsl({config.color.neutral.hue.default}, {config.color.neutral.saturation.default}, 20%)"
