--- a/tokens/application.json
+++ b/tokens/application.json
@@ -698,7 +698,7 @@
             },
             "translucentSubtle": {
               "type": "color",
-              "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.translucent}, 10%, {config.color.neutral.alpha.bg.default})"
+              "value": "hsla({config.color.neutral.hue.default}, {config.color.neutral.saturation.translucent}, 10%, {config.color.neutral.alpha.bg.subtle})"
             },
             "tone": {
               "type": "color",
