update config grey and neutral

--- a/tokens/config.json
+++ b/tokens/config.json
@@ -269,15 +269,15 @@
         "alpha": {
           "bg": {
             "default": {
-              "value": "0.4",
+              "value": "0.25",
               "type": "other"
             },
             "hover": {
-              "value": "0.5",
+              "value": "0.3",
               "type": "other"
             },
             "active": {
-              "value": "0.6",
+              "value": "0.35",
               "type": "other"
             },
             "subtle": {
@@ -287,15 +287,15 @@
           },
           "border": {
             "default": {
-              "value": "0.5",
+              "value": "0.35",
               "type": "other"
             },
             "hover": {
-              "value": "0.55",
+              "value": "0.4",
               "type": "other"
             },
             "active": {
-              "value": "0.6",
+              "value": "0.45",
               "type": "other"
             },
             "subtle": {
@@ -417,29 +417,37 @@
         "alpha": {
           "bg": {
             "default": {
-              "value": "0.2",
-              "type": "other"
-            },
-            "hover": {
               "value": "0.25",
               "type": "other"
             },
-            "active": {
+            "hover": {
               "value": "0.3",
+              "type": "other"
+            },
+            "active": {
+              "value": "0.35",
+              "type": "other"
+            },
+            "subtle": {
+              "value": "0.2",
               "type": "other"
             }
           },
           "border": {
             "default": {
-              "value": "0.4",
+              "value": "0.35",
               "type": "other"
             },
             "hover": {
-              "value": "0.5",
+              "value": "0.4",
               "type": "other"
             },
             "active": {
-              "value": "0.55",
+              "value": "0.45",
+              "type": "other"
+            },
+            "subtle": {
+              "value": "0.25",
               "type": "other"
             }
           }
