fix tertira and update dark

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -600,7 +600,7 @@
             },
             "onTranslucent": {
               "type": "color",
-              "value": "{app.color.surface.fg.default}"
+              "value": "{app.color.surface.fg.inverted}"
             }
           }
         },
