--- a/tokens/application.json
+++ b/tokens/application.json
@@ -514,7 +514,7 @@
             "type": "color"
           },
           "link": {
-            "value": "hsl({config.color.accent.hue.default}, {config.color.accent.saturation.default}, 50%)",
+            "value": "hsl({config.color.primary.hue.default}, {config.color.primary.saturation.default}, 50%)",
             "type": "color"
           },
           "inverted": {
@@ -608,31 +608,31 @@
           "bg": {
             "solid": {
               "type": "color",
-              "value": "hsl({config.color.accent.hue.default}, {config.color.accent.saturation.default}, 50%)"
+              "value": "hsl({config.color.primary.hue.default}, {config.color.primary.saturation.default}, 50%)"
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.accent.hue.default}, {config.color.accent.saturation.translucent}, 50%, {config.color.accent.alpha.bg.default})"
+              "value": "hsla({config.color.primary.hue.default}, {config.color.primary.saturation.translucent}, 50%, {config.color.primary.alpha.bg.default})"
             },
             "tone": {
               "type": "color",
-              "value": "hsl({config.color.accent.hue.default}, {config.color.accent.saturation.default}, 20%)"
+              "value": "hsl({config.color.primary.hue.default}, {config.color.primary.saturation.default}, 20%)"
             }
           },
           "border": {
             "solid": {
               "type": "color",
-              "value": "hsl({config.color.accent.hue.default}, {config.color.accent.saturation.default}, 40%)"
+              "value": "hsl({config.color.primary.hue.default}, {config.color.primary.saturation.default}, 40%)"
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.accent.hue.default}, {config.color.accent.saturation.translucent}, 40%, {config.color.accent.alpha.border.default})"
+              "value": "hsla({config.color.primary.hue.default}, {config.color.primary.saturation.translucent}, 40%, {config.color.primary.alpha.border.default})"
             }
           },
           "fg": {
             "solid": {
               "type": "color",
-              "value": "hsl({config.color.accent.hue.default}, {config.color.accent.saturation.default}, 35%)"
+              "value": "hsl({config.color.primary.hue.default}, {config.color.primary.saturation.default}, 35%)"
             },
             "onSolid": {
               "type": "color",
@@ -640,11 +640,11 @@
             },
             "onTone": {
               "type": "color",
-              "value": "hsl({config.color.accent.hue.default}, {config.color.accent.saturation.translucent}, 85%)"
+              "value": "hsl({config.color.primary.hue.default}, {config.color.primary.saturation.translucent}, 85%)"
             },
             "onTranslucent": {
               "type": "color",
-              "value": "hsl({config.color.accent.hue.default}, {config.color.accent.saturation.default}, 20%)"
+              "value": "hsl({config.color.primary.hue.default}, {config.color.primary.saturation.default}, 20%)"
             }
           }
         },
@@ -932,7 +932,7 @@
             },
             "checked": {
               "type": "color",
-              "value": "hsla({config.color.accent.hue.default}, {config.color.accent.saturation.default}, 50%, {config.color.accent.alpha.bg.default})"
+              "value": "hsla({config.color.primary.hue.default}, {config.color.primary.saturation.default}, 50%, {config.color.primary.alpha.bg.default})"
             }
           },
           "border": {
