--- a/tokens/config.json
+++ b/tokens/config.json
@@ -311,7 +311,7 @@
           }
         }
       },
-      "accent": {
+      "primary": {
         "hue": {
           "default": {
             "value": "215",
