--- a/tokens/application.json
+++ b/tokens/application.json
@@ -626,7 +626,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.primary.hue.default}, {config.color.primary.saturation.translucent}, 40%, {config.color.primary.alpha.border.default})"
+              "value": "hsla({config.color.primary.hue.default}, {config.color.primary.saturation.translucent}, 40%, 0.1)"
             }
           },
           "fg": {
